[package]
name = "test_0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

rust-bert = "=0.22.0"

anyhow = "1.0"

qdrant-client = "1.8.0"

serde_json = "1.0.115"

tokio = { version = "1", features = ["full"] }
